--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
   },
   "devDependencies": {
     "eslint": "^7.22.0",
-    "htmlhint": "^0.14.2",
+    "htmlhint": "^1.1.4",
     "vite": "^2.1.0"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "pixi.js": "^7.2.4"
+  }
 }
